--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -53,7 +53,7 @@
 
     <EditText
         android:id="@+id/name_id"
-        android:layout_width="343dp"
+        android:layout_width="0dp"
         android:layout_height="48dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
@@ -130,6 +130,18 @@
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/amount_id"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/testText_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/error"
+        android:textColor="@color/design_default_color_error"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/createBookingButton_id"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/notes_id" />
 
     <Button
         android:id="@+id/createBookingButton_id"
