--- a/app/src/main/res/layout/activity_send_order.xml
+++ b/app/src/main/res/layout/activity_send_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".List_of_ordered_items_Activity">
+    tools:context=".SendOrderActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topbarLayout"
