--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -72,7 +72,7 @@
 
     <EditText
         android:id="@+id/amount_id"
-        android:layout_width="112dp"
+        android:layout_width="100dp"
         android:layout_height="48dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/edit_text_background"
@@ -91,24 +91,43 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/arrivalTime_id"
-        android:layout_width="171dp"
+        android:id="@+id/date_id"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
+        android:background="@drawable/edit_text_background"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="date"
+        android:minHeight="48dp"
+        android:paddingStart="@dimen/padding_edit_text"
+        android:paddingEnd="@dimen/padding_edit_text"
+        app:layout_constraintBottom_toTopOf="@+id/notes_id"
+        app:layout_constraintEnd_toStartOf="@+id/time_id"
+        app:layout_constraintStart_toEndOf="@+id/amount_id"
+        app:layout_constraintTop_toBottomOf="@+id/name_id" />
+
+    <EditText
+        android:id="@+id/time_id"
+        android:layout_width="70dp"
         android:layout_height="48dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/edit_text_background"
+        android:clickable="false"
+        android:cursorVisible="false"
         android:ems="10"
-        android:hint="@string/time"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="time"
         android:minHeight="48dp"
         android:paddingStart="@dimen/padding_edit_text"
         android:paddingEnd="@dimen/padding_edit_text"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         app:layout_constraintBottom_toTopOf="@+id/notes_id"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintHorizontal_bias="0.989"
         app:layout_constraintStart_toEndOf="@+id/amount_id"
         app:layout_constraintTop_toBottomOf="@+id/name_id"
         app:layout_constraintVertical_bias="0.0" />
