--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -15,7 +15,7 @@
         android:background="@color/appBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/button_back_booking"
@@ -37,15 +37,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_log_in"
-        android:paddingStart="@dimen/padding_edit_text"
-        android:paddingEnd="@dimen/padding_edit_text"
         android:autofillHints="username"
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:hint="@string/log_in_username"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/view_password"
+        android:paddingStart="@dimen/padding_edit_text"
+        android:paddingEnd="@dimen/padding_edit_text"
+        app:layout_constraintBottom_toTopOf="@+id/button_log_in"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -57,13 +57,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_log_in"
         android:text="@string/log_in"
+        android:textColor="@color/black"
+        app:backgroundTint="@color/appOrange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/edit_password"
-        app:backgroundTint="@color/appOrange"
-        android:textColor="@color/black"/>
+        app:layout_constraintTop_toBottomOf="@+id/edit_username" />
 
     <TextView
         android:id="@+id/view_name"
@@ -72,45 +72,13 @@
         android:layout_marginBottom="@dimen/padding_log_in"
         android:alpha="1"
         android:text="@string/log_in_name"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/edit_username"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:textColor="@color/black"/>
-
-    <TextView
-        android:id="@+id/view_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding_log_in"
-        android:text="@string/log_in_losenord"
-        app:layout_constraintBottom_toTopOf="@+id/edit_password"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/edit_username"
-        android:textColor="@color/black"/>
-
-    <EditText
-        android:id="@+id/edit_password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding_log_in"
-        android:paddingStart="@dimen/padding_edit_text"
-        android:paddingEnd="@dimen/padding_edit_text"
-        android:autofillHints="password"
-        android:background="@drawable/edit_text_background"
-        android:ems="10"
-        android:hint="@string/log_in_password"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_log_in"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/view_password" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_left"
