--- a/app/src/main/res/layout/activity_order_list_view.xml
+++ b/app/src/main/res/layout/activity_order_list_view.xml
@@ -9,20 +9,37 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:padding="10dip"
-        android:textSize="16dip"
+        android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/dish_note"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
     </TextView>
+
+    <TextView
+        android:id="@+id/dish_price"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="end"
+        android:padding="10dip"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/dish_note"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"></TextView>
     <TextView
         android:id="@+id/dish_note"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="10dip"
-        android:textSize="16dip"
+        android:padding="2dip"
+        android:layout_marginStart="40sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/dish_price"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,17 +47,5 @@
         app:layout_constraintTop_toBottomOf="@+id/dish_name"
         tools:ignore="MissingConstraints">
     </TextView>
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/dish_price"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="10dip"
-        android:textSize="16dip"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/dish_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dish_note"
-        tools:ignore="MissingConstraints">
-    </TextView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
