--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:layout_marginHorizontal">@dimen/horizontal_margin_order</item>
         <item name="android:gravity">center|top</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:visibility">invisible</item>
     </style>
 </resources>
