--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#EAEBEF</color>
     <color name="appBlue">#2094D0</color>
     <color name="appOrange">#F8A236</color>
+    <color name="appRed">#EB0D00</color>
     <color name="foodYellow">#F4D66A</color>
     <color name="foodBlue">#5CE0E5</color>
     <color name="foodPurple">#FE66C3</color>
