Started working on log-in page, can now log in with personnummer. Haven't fixed so it works after app close yet.

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -26,7 +26,7 @@
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:hint="@string/log_in_username"
-        android:inputType="numberPassword"
+        android:inputType="number"
         android:minHeight="48dp"
         android:paddingStart="@dimen/padding_edit_text"
         android:paddingEnd="@dimen/padding_edit_text"
