--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -9,4 +9,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:visibility">invisible</item>
     </style>
+    <style name="checkbox_button">
+        <item name="colorAccent">@android:color/holo_green_dark</item>
+    </style>
 </resources>
