--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -4,4 +4,8 @@
     <dimen name="padding_edit_text">10dp</dimen>
     <dimen name="padding_order">127dp</dimen>
     <dimen name="horizontal_margin_order">5dp</dimen>
+    <!-- POPUP -->
+    <dimen name="padding_popup">100dp</dimen>
+    <dimen name="padding_popup_text">10dp</dimen>
+    <dimen name="padding_popup_title">2dp</dimen>
 </resources>
